Push blog pages and fix page alignments

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,7 @@ html,
 body {
   height: 100%;
   @apply min-h-screen;
+  overflow-x: hidden;
 }
 
 body {
